moved to hugo to host my website

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,11 @@
-image: alpine:latest
+image: monachus/hugo
+
+variables:
+  GIT_SUBMODULE_STRATEGY: recursive
 
 pages:
-  stage: deploy
   script:
-  - echo 'Nothing to do...'
+  - hugo
   artifacts:
     paths:
     - public
