--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseurl = "https://felixleger.com"
 languageCode = "en-us"
 theme = "hugo-theme-hello-friend"
 paginate = 5
+enableEmoji = true
 
 [params]
   # dir name of your blog content (default is `content/posts`)
