--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 theme = "hugo-theme-hello-friend"
 paginate = 5
 enableEmoji = true
+enableRobotsTXT = true
 
 [params]
   # dir name of your blog content (default is `content/posts`)
