--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
 baseurl = "https://felixleger.com"
+disqusShortname = "fellleg"
 languageCode = "en-us"
 theme = "hugo-theme-hello-friend"
 paginate = 5
