--- a/config.toml
+++ b/config.toml
@@ -42,7 +42,7 @@ disqusShortname = "felixleger"
         identifier = "about"
         name = "About"
         url = "/about"
-      #[[languages.en.menu.main]]
-      #  identifier = "showcase"
-      #  name = "Showcase"
-      #  url = "/showcase"
+      [[languages.en.menu.main]]
+        identifier = "tags"
+        name = "Tags"
+        url = "/tags"
