--- a/config.toml
+++ b/config.toml
@@ -59,7 +59,7 @@ disableHugoGeneratorInject = false
   keywords = ""
   images = [""]
 
-  homeSubtitle = "DevOps at Contxtful"
+  homeSubtitle = "DevOps"
 
   # Prefix of link to the git commit detail page. GitInfo must be enabled.
   #
@@ -96,7 +96,7 @@ disableHugoGeneratorInject = false
   # If you want, you can easily override the default footer with your own content.
   #
   footerLeft = "Powered by <a href=\"http://gohugo.io\">Hugo</a>"
-  footerRight = "Base theme by <a href=\"https://github.com/rhazdon\">Djordje Atlialp</a>"
+  footerRight = "Theme based on <a href=\"https://github.com/rhazdon/hugo-theme-hello-friend-ng\">Hello Friend NG</a>"
 
   # Colors for favicons
   #
@@ -118,7 +118,7 @@ disableHugoGeneratorInject = false
   [params.portrait]
     path     = "img/felixleger.png"
     alt      = "Portrait"
-    maxWidth = "100px"
+    maxWidth = "200px"
 
   # Social icons
   [[params.social]]
