fix: update job title, fix footer

--- a/config.toml
+++ b/config.toml
@@ -59,7 +59,7 @@ disableHugoGeneratorInject = false
   keywords = ""
   images = [""]
 
-  homeSubtitle = "DevOps"
+  homeSubtitle = "DevOps Lead"
 
   # Prefix of link to the git commit detail page. GitInfo must be enabled.
   #
