--- a/themes/hello-friend-ng/exampleSite/config.toml
+++ b/themes/hello-friend-ng/exampleSite/config.toml
@@ -61,6 +61,9 @@ disableHugoGeneratorInject = false
 
   homeSubtitle = "Hello Friend NG"
 
+  # Set a background for the homepage
+  # backgroundImage = "assets/images/background.jpg"
+
   # Prefix of link to the git commit detail page. GitInfo must be enabled.
   #
   # gitUrl = ""
@@ -83,6 +86,16 @@ disableHugoGeneratorInject = false
   customCSS = []
   customJS  = []
 
+  # Commento is more than just a comments widget you can embed — 
+  # it’s a return to the roots of the internet. 
+  # An internet without the tracking and invasions of privacy. 
+  # An internet that is simple and lightweight. 
+  # An internet that is focused on interesting discussions, not ads. 
+  # A better internet.
+  # Uncomment this to enable Commento.
+  # 
+  # commentoUrl = ""
+
   # Toggle this option need to rebuild SCSS, requires extended version of Hugo
   #
   justifyContent = false  # Set "text-align: justify" to .post-content.
@@ -90,7 +103,7 @@ disableHugoGeneratorInject = false
   # Default theme "light" or "dark"
   #
   defaultTheme = "dark"
-  themeColor = "#252627"
+  themeColor = "#1b1c1d"
 
   # Custom footer 
   # If you want, you can easily override the default footer with your own content. 
@@ -101,11 +114,12 @@ disableHugoGeneratorInject = false
   # Colors for favicons
   #
   [params.favicon.color]
-    mask = "#252627"
-    msapplication = "#252627"
-    theme = "#252627"
+    mask = "#1b1c1d"
+    msapplication = "#1b1c1d"
+    theme = "#1b1c1d"
 
   [params.logo]
+    logoMark     = ">"
     logoText     = "$ cd /home/"
     logoHomeLink = "/"
     # Set true to remove the logo cursor entirely.
