--- a/config.toml
+++ b/config.toml
@@ -58,7 +58,7 @@ disableHugoGeneratorInject = false
   keywords = ""
   images = [""]
 
-  homeSubtitle = "DevOps Lead at Contxtful and human with feelings"
+  homeSubtitle = "DevOps Lead at Contxtful and normal human being"
 
   # Prefix of link to the git commit detail page. GitInfo must be enabled.
   #
