enable tags in header

--- a/config.toml
+++ b/config.toml
@@ -159,10 +159,10 @@ disableHugoGeneratorInject = false
     identifier = "posts"
     name       = "Posts"
     url        = "posts/"
-  #[[menu.main]]
-  #  identifier = "tags"
-  #  name       = "Tags"
-  #  url        = "tags/"
+  [[menu.main]]
+    identifier = "tags"
+    name       = "Tags"
+    url        = "tags/"
 
 [markup]
   [markup.tableOfContents]
