feat(google analytics): fix google analytics

--- a/config.toml
+++ b/config.toml
@@ -47,6 +47,7 @@ disableHugoGeneratorInject = false
   series   = "series"
 
 [params]
+  googleAnalyticsID = "G-1H1JWYX6HY"
   dateform        = "Jan 2, 2006"
   dateformShort   = "Jan 2"
   dateformNum     = "2006-01-02"
