--- a/random-thoughts/config.toml
+++ b/random-thoughts/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://felixleger.com/random-thoughts"
 languageCode = "en-us"
-title = "My New Hugo Site"
-theme = "dimension"
+title = "Just Random Thoughts (no guarantees)"
+Theme = "dimension"
