--- a/random-thoughts/themes/dimension/exampleSite/config.toml
+++ b/random-thoughts/themes/dimension/exampleSite/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://felixleger.com/random-thoughts/"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "dimension"
