--- a/random-thoughts/themes/dimension/static/admin/config.yml
+++ b/random-thoughts/themes/dimension/static/admin/config.yml
@@ -29,7 +29,7 @@ collections:
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
   - name: 'posts'
-    label: 'Posts'
+    label: 'Okay, sure'
     folder: 'content/posts'
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
