change email address main page
Former-commit-id: 55a4c17d74a8d1c98f6c9a87d6e69b780849a30e

--- a/config.toml
+++ b/config.toml
@@ -128,7 +128,7 @@ disableHugoGeneratorInject = false
   # Social icons
   [[params.social]]
     name = "email"
-    url  = "mailto:hi@felixleger.com"
+    url  = "mailto:felix@felixleger.com"
 
   [[params.social]]
     name = "linkedin"
