add lists section
Former-commit-id: 4aa6930069f6a275ebfdf663553b17f5e7db38fc

--- a/config.toml
+++ b/config.toml
@@ -167,9 +167,13 @@ disableHugoGeneratorInject = false
     name       = "About"
     url        = "about/"
   [[menu.main]]
-    identifier = "posts"
-    name       = "Posts"
+    identifier = "blog"
+    name       = "Blog"
     url        = "posts/"
+  [[menu.main]]
+    identifier = "lists"
+    name       = "Lists"
+    url        = "lists/"
   [[menu.main]]
     identifier = "tags"
     name       = "Tags"
