disable rss until i figure out how to disable it per section
Former-commit-id: a7b8ede9be22c4e50c7655a1eeb9b9feed1d2684

--- a/config.toml
+++ b/config.toml
@@ -29,8 +29,8 @@ enableRobotsTXT = true
 enableGitInfo   = false
 enableEmoji     = true
 enableMissingTranslationPlaceholders = false
-disableRSS     = false
-disableSitemap = false
+disableRSS     = true
+disableSitemap = true
 disable404     = false
 disableHugoGeneratorInject = false
 
