attempt-at-re-enable rss
Former-commit-id: 4147b7c933617da3e9a8ef384baf9fd7c2137496

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ pages:
   - hugo
   - cd random-thoughts && hugo && cd -
   - mv random-thoughts/public public/random-thoughts # This command is artistic
+  - cd public && rm index.xml && ln -s posts/index.xml
 
   artifacts:
     paths:
