change go link main page
Former-commit-id: 9d840d2362857d0a2a5dba1dd523fbb5d19eda0b

--- a/config.toml
+++ b/config.toml
@@ -154,7 +154,7 @@ disableHugoGeneratorInject = false
 
   [[params.social]]
     name = "online-go"
-    url  = "https://online-go.com/player/416731/"
+    url  = "go"
 
   [[params.social]]
     name = "spotify"
