add authors to my lectures & redirect /playlist -> /spotify to my spotify profile

--- a/config.toml
+++ b/config.toml
@@ -159,7 +159,7 @@ disableHugoGeneratorInject = false
 
   [[params.social]]
     name = "spotify"
-    url  = "/playlist"
+    url  = "/spotify"
 
   [[params.social]]
     name = "bandcamp"
