--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ PygmentsCodeFences = true
 PygmentsStyle = "monokai"
 
 paginate  = 30
-timeZone  = "America/Montreal"
+timeZone  = "America/Toronto"
 rssLimit  = 20  # Maximum number of items in the RSS feed.
 copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License." # This message is only used by the RSS template.
 
