--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
-image: klakegg/hugo:ci
+image: klakegg/hugo:alpine-ci
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
 
 pages:
   script:
+  - apk update && apk add tzdata
   - hugo
   - cd random-thoughts && hugo && cd -
   - mv random-thoughts/public public/random-thoughts # This command is artistic
