--- a/config.toml
+++ b/config.toml
@@ -153,13 +153,16 @@ disableHugoGeneratorInject = false
 #    url  = "https://stackoverflow.com/users/5565172/felleg"
 
   [[params.social]]
-    name = "online-go"
-    url  = "go"
-
+    name = "my reading list"
+    url = "/readlist"
 
   [[params.social]]
     name = "spotify"
     url  = "/spotify"
+
+  [[params.social]]
+    name = "online-go"
+    url  = "go"
 
   [[params.social]]
     name = "bandcamp"
