default theme light

--- a/config.toml
+++ b/config.toml
@@ -93,7 +93,7 @@ disableHugoGeneratorInject = false
 
   # Default theme "light" or "dark"
   #
-  defaultTheme = "dark"
+  defaultTheme = "light"
   themeColor = "#252627"
 
   # Custom footer
