add cv link, remove lists link

--- a/config.toml
+++ b/config.toml
@@ -195,10 +195,10 @@ disableHugoGeneratorInject = false
     identifier = "blog"
     name       = "Blog"
     url        = "posts/"
-  [[menu.main]]
-    identifier = "lists"
-    name       = "Lists"
-    url        = "lists/"
+  #[[menu.main]]
+  #  identifier = "lists"
+  #  name       = "Lists"
+  #  url        = "lists/"
   [[menu.main]]
     identifier = "tags"
     name       = "Tags"
