--- a/config.toml
+++ b/config.toml
@@ -200,6 +200,10 @@ disableHugoGeneratorInject = false
   #  name       = "Lists"
   #  url        = "lists/"
   [[menu.main]]
+    identifier = "books"
+    name       = "Books"
+    url        = "books/"
+  [[menu.main]]
     identifier = "tags"
     name       = "Tags"
     url        = "tags/"
