social icon books link to allbooks

--- a/config.toml
+++ b/config.toml
@@ -171,7 +171,7 @@ disableHugoGeneratorInject = false
 
   [[params.social]]
     name = "books"
-    url = "/books"
+    url = "/allbooks"
 
   [[params.social]]
     name = "art"
