--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,9 @@ variables:
 pages:
   script:
   - bash scripts/generate-allreads.sh
+  - cd static/do-you-know-this-person-243987978423987fsdalksadflqrweoyzv/
+  - bash update_photo_array.sh
+  - cd -
   - hugo
 
   artifacts:
