--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ variables:
 
 pages:
   script:
-  - apt -y install imagemagick
+  - apt -y update && apt -y install imagemagick
   - bash scripts/generate-allreads.sh
   - cd static/do-you-know-this-person-243987978423987fsdalksadflqrweoyzv/
   - bash update_photo_array.sh
