--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,13 +5,13 @@ variables:
 
 pages:
   script:
-  - hugo
-  - apt -y update && apt -y install imagemagick
-  - bash scripts/generate-allreads.sh
+    #- hugo
+    #- apt -y update && apt -y install imagemagick
+    #- bash scripts/generate-allreads.sh
   - bash scripts/generate-bookshelf.sh
-  - cd static/do-you-know-this-person-243987978423987fsdalksadflqrweoyzv/
-  - bash update_photo_array.sh
-  - cd -
+    #- cd static/do-you-know-this-person-243987978423987fsdalksadflqrweoyzv/
+    #- bash update_photo_array.sh
+    #- cd -
   - hugo
 
   artifacts:
