--- a/config.toml
+++ b/config.toml
@@ -221,3 +221,6 @@ disableHugoGeneratorInject = false
     endLevel = 2
     ordered = false
     startLevel = 1
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
