--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ pages:
     - bash scripts/generate-allreads.sh
     - bash scripts/generate-bookshelf.sh
     - bash scripts/generate-star-quotes.sh
-    - ls content/posts/star-quotes.md
+    - ln -s content/posts/star-quotes.md static/star-quotes.md
     #- cd static/do-you-know-this-person-243987978423987fsdalksadflqrweoyzv/
     #- bash update_photo_array.sh
     #- cd -
